@@ -12,6 +12,7 @@ import io.swagger.v3.core.converter.ResolvedSchema;
 import io.swagger.v3.core.util.AnnotationsUtils;
 import io.swagger.v3.core.util.Json;
 import io.swagger.v3.core.util.Json31;
+import io.swagger.v3.core.util.KotlinDetector;
 import io.swagger.v3.core.util.ParameterProcessor;
 import io.swagger.v3.core.util.PathUtils;
 import io.swagger.v3.core.util.ReflectionUtils;
@@ -87,6 +88,8 @@ public class Reader implements OpenApiReader {
     private Components components;
     private Paths paths;
     private Set<Tag> openApiTags;
+
+    private String defaultResponseKey = ApiResponses.DEFAULT;
 
     private static final String GET_METHOD = "get";
     private static final String POST_METHOD = "post";
@@ -165,7 +168,7 @@ public class Reader implements OpenApiReader {
         for (Class<?> cls : sortedClasses) {
             if (ReaderListener.class.isAssignableFrom(cls) && !listeners.containsKey(cls)) {
                 try {
-                    listeners.put(cls, (ReaderListener) cls.newInstance());
+                    listeners.put(cls, (ReaderListener) cls.getDeclaredConstructor().newInstance());
                 } catch (Exception e) {
                     LOGGER.error("Failed to create ReaderListener", e);
                 }
@@ -216,6 +219,7 @@ public class Reader implements OpenApiReader {
                     this.components = this.openAPI.getComponents();
                 }
             }
+            this.defaultResponseKey = StringUtils.isBlank(config.getDefaultResponseCode()) ? ApiResponses.DEFAULT : config.getDefaultResponseCode();
         }
     }
 
@@ -259,8 +263,6 @@ public class Reader implements OpenApiReader {
                     }
                     m = innerApp.getClass().getMethod("getApplication");
                 }
-            } catch (NoSuchMethodException e) {
-                // no inner application found
             } catch (Exception e) {
                 // no inner application found
             }
@@ -304,7 +306,8 @@ public class Reader implements OpenApiReader {
         javax.ws.rs.Consumes classConsumes = ReflectionUtils.getAnnotation(cls, javax.ws.rs.Consumes.class);
         javax.ws.rs.Produces classProduces = ReflectionUtils.getAnnotation(cls, javax.ws.rs.Produces.class);
 
-        boolean classDeprecated = ReflectionUtils.getAnnotation(cls, Deprecated.class) != null;
+        boolean classDeprecated = ReflectionUtils.getAnnotation(cls, Deprecated.class) != null
+                || (KotlinDetector.isKotlinPresent() && ReflectionUtils.getAnnotation(cls, KotlinDetector.getKotlinDeprecated()) != null);
 
         // OpenApiDefinition
         OpenAPIDefinition openAPIDefinition = ReflectionUtils.getAnnotation(cls, OpenAPIDefinition.class);
@@ -348,7 +351,7 @@ public class Reader implements OpenApiReader {
                     Map<String, SecurityScheme> securitySchemeMap = new HashMap<>();
                     if (StringUtils.isNotBlank(securityScheme.get().key)) {
                         securitySchemeMap.put(securityScheme.get().key, securityScheme.get().securityScheme);
-                        if (components.getSecuritySchemes() != null && components.getSecuritySchemes().size() != 0) {
+                        if (components.getSecuritySchemes() != null && !components.getSecuritySchemes().isEmpty()) {
                             components.getSecuritySchemes().putAll(securitySchemeMap);
                         } else {
                             components.setSecuritySchemes(securitySchemeMap);
@@ -409,7 +412,7 @@ public class Reader implements OpenApiReader {
         final List<Parameter> globalParameters = new ArrayList<>();
 
         // look for constructor-level annotated properties
-        globalParameters.addAll(ReaderUtils.collectConstructorParameters(cls, components, classConsumes, null));
+        globalParameters.addAll(ReaderUtils.collectConstructorParameters(cls, components, classConsumes, null, config.getSchemaResolution()));
 
         // look for field-level annotated properties
         globalParameters.addAll(ReaderUtils.collectFieldParameters(cls, components, classConsumes, null));
@@ -433,7 +436,8 @@ public class Reader implements OpenApiReader {
                 continue;
             }
 
-            boolean methodDeprecated = ReflectionUtils.getAnnotation(method, Deprecated.class) != null;
+            boolean methodDeprecated = ReflectionUtils.getAnnotation(method, Deprecated.class) != null
+                    || (KotlinDetector.isKotlinPresent() && ReflectionUtils.getAnnotation(method, KotlinDetector.getKotlinDeprecated()) != null);
 
             javax.ws.rs.Path methodPath = ReflectionUtils.getAnnotation(method, javax.ws.rs.Path.class);
 
@@ -584,7 +588,7 @@ public class Reader implements OpenApiReader {
                     }
                     // if we have form parameters, need to merge them into single schema and use as request body..
                     if (!formParameters.isEmpty()) {
-                        Schema mergedSchema = new ObjectSchema();
+                        Schema<?> mergedSchema = new ObjectSchema();
                         Map<String, Encoding> encoding = new LinkedHashMap<>();
                         for (Parameter formParam: formParameters) {
                             if (formParam.getExplode() != null || (formParam.getStyle() != null) && Encoding.StyleEnum.fromString(formParam.getStyle().toString()) != null) {
@@ -597,7 +601,7 @@ public class Reader implements OpenApiReader {
                                 }
                                 encoding.put(formParam.getName(), e);
                             }
-                            mergedSchema.addProperties(formParam.getName(), formParam.getSchema());
+                            mergedSchema.addProperty(formParam.getName(), formParam.getSchema());
                             if (formParam.getSchema() != null &&
                                     StringUtils.isNotBlank(formParam.getDescription()) &&
                                     StringUtils.isBlank(formParam.getSchema().getDescription())) {
@@ -730,10 +734,10 @@ public class Reader implements OpenApiReader {
                 .filter(p -> p.getSchema() != null)
                 .filter(p -> StringUtils.isBlank(p.getSchema().getPattern()))
                 .filter(p -> !Parameter.StyleEnum.MATRIX.equals(p.getStyle()))
-                .filter(p -> "string" == p.getSchema().getType() || (p.getSchema().getTypes() != null && p.getSchema().getTypes().contains("string")))
+                .filter(p -> "string".equals(p.getSchema().getType()) || (p.getSchema().getTypes() != null && p.getSchema().getTypes().contains("string")))
                 .forEach(p -> p.getSchema().setPattern(patternsMap.get(p.getName())));
     }
-    protected Content processContent(Content content, Schema schema, Consumes methodConsumes, Consumes classConsumes) {
+    protected Content processContent(Content content, Schema<?> schema, Consumes methodConsumes, Consumes classConsumes) {
         if (content == null) {
             content = new Content();
         }
@@ -785,7 +789,7 @@ public class Reader implements OpenApiReader {
                             } else if (mediaType.getSchema() != null && requestBodyAnnotation.useParameterTypeSchema()) {
                                 if (requestBodyParameter.getSchema() != null) {
                                     MediaType newMediaType = clone(mediaType);
-                                    Schema parameterSchema = clone(requestBodyParameter.getSchema());
+                                    Schema<?> parameterSchema = clone(requestBodyParameter.getSchema());
                                     Optional<io.swagger.v3.oas.annotations.media.Content> content = Arrays.stream(requestBodyAnnotation.content()).filter(c -> c.mediaType().equals(key)).findFirst();
                                     if (content.isPresent()) {
                                         Optional<Schema> reResolvedSchema = AnnotationsUtils.getSchemaFromAnnotation(content.get().schema(), components, null, config.isOpenAPI31(), parameterSchema);
@@ -863,7 +867,7 @@ public class Reader implements OpenApiReader {
         return null;
     }
 
-    private void setMediaTypeToContent(Schema schema, Content content, String value) {
+    private void setMediaTypeToContent(Schema<?> schema, Content content, String value) {
         MediaType mediaTypeObject = new MediaType();
         mediaTypeObject.setSchema(schema);
         content.addMediaType(value, mediaTypeObject);
@@ -1016,7 +1020,7 @@ public class Reader implements OpenApiReader {
                 callbacks.putAll(currentCallbacks);
             }
         }
-        if (callbacks.size() > 0) {
+        if (!callbacks.isEmpty()) {
             operation.setCallbacks(callbacks);
         }
 
@@ -1085,7 +1089,9 @@ public class Reader implements OpenApiReader {
                     classProduces,
                     methodProduces,
                     components,
-                    jsonViewAnnotation
+                    jsonViewAnnotation,
+                    config.isOpenAPI31(),
+                    defaultResponseKey
             ).ifPresent(responses -> {
                 if (operation.getResponses() == null) {
                     operation.setResponses(responses);
@@ -1106,7 +1112,9 @@ public class Reader implements OpenApiReader {
                     classProduces,
                     methodProduces,
                     components,
-                    jsonViewAnnotation
+                    jsonViewAnnotation,
+                    config.isOpenAPI31(),
+                    defaultResponseKey
             ).ifPresent(responses -> {
                 if (operation.getResponses() == null) {
                     operation.setResponses(responses);
@@ -1157,7 +1165,7 @@ public class Reader implements OpenApiReader {
         final Class<?> subResource = getSubResourceWithJaxRsSubresourceLocatorSpecs(method);
         Schema returnTypeSchema = null;
         if (!shouldIgnoreClass(returnType.getTypeName()) && !method.getGenericReturnType().equals(subResource)) {
-            ResolvedSchema resolvedSchema = ModelConverters.getInstance(config.isOpenAPI31()).resolveAsResolvedSchema(new AnnotatedType(returnType).resolveAsRef(true).jsonViewAnnotation(jsonViewAnnotation).components(components));
+            ResolvedSchema resolvedSchema = ModelConverters.getInstance(config.isOpenAPI31(), config.getSchemaResolution()).resolveAsResolvedSchema(new AnnotatedType(returnType).resolveAsRef(true).jsonViewAnnotation(jsonViewAnnotation).components(components));
             if (resolvedSchema.schema != null) {
                 returnTypeSchema = resolvedSchema.schema;
                 Content content = new Content();
@@ -1166,20 +1174,20 @@ public class Reader implements OpenApiReader {
                         methodProduces == null ? new String[0] : methodProduces.value(), content, mediaType);
                 if (operation.getResponses() == null) {
                     operation.responses(
-                            new ApiResponses()._default(
+                            new ApiResponses().addApiResponse(defaultResponseKey,
                                     new ApiResponse().description(DEFAULT_DESCRIPTION)
                                             .content(content)
                             )
                     );
                 }
-                if (operation.getResponses().getDefault() != null &&
-                        StringUtils.isBlank(operation.getResponses().getDefault().get$ref())) {
-                    if (operation.getResponses().getDefault().getContent() == null) {
-                        operation.getResponses().getDefault().content(content);
+                if (operation.getResponses().get(defaultResponseKey) != null &&
+                        StringUtils.isBlank(operation.getResponses().get(defaultResponseKey).get$ref())) {
+                    if (operation.getResponses().get(defaultResponseKey).getContent() == null) {
+                        operation.getResponses().get(defaultResponseKey).content(content);
                     } else {
-                        for (String key : operation.getResponses().getDefault().getContent().keySet()) {
-                            if (operation.getResponses().getDefault().getContent().get(key).getSchema() == null) {
-                                operation.getResponses().getDefault().getContent().get(key).setSchema(returnTypeSchema);
+                        for (String key : operation.getResponses().get(defaultResponseKey).getContent().keySet()) {
+                            if (operation.getResponses().get(defaultResponseKey).getContent().get(key).getSchema() == null) {
+                                operation.getResponses().get(defaultResponseKey).getContent().get(key).setSchema(returnTypeSchema);
                             }
                         }
                     }
@@ -1195,14 +1203,15 @@ public class Reader implements OpenApiReader {
             Content content = resolveEmptyContent(classProduces, methodProduces);
 
             ApiResponse apiResponseObject = new ApiResponse().description(DEFAULT_DESCRIPTION).content(content);
-            operation.setResponses(new ApiResponses()._default(apiResponseObject));
+            operation.setResponses(new ApiResponses().addApiResponse(defaultResponseKey, apiResponseObject));
         }
         if (returnTypeSchema != null) {
             resolveResponseSchemaFromReturnType(operation, classResponses, returnTypeSchema, classProduces, methodProduces);
             if (apiResponses != null) {
                 resolveResponseSchemaFromReturnType(
                         operation,
-                        apiResponses.stream().toArray(io.swagger.v3.oas.annotations.responses.ApiResponse[]::new),
+                    apiResponses.toArray(
+                        new io.swagger.v3.oas.annotations.responses.ApiResponse[0]),
                         returnTypeSchema,
                         classProduces,
                         methodProduces);
@@ -1250,14 +1259,14 @@ public class Reader implements OpenApiReader {
         }
         return mediaType;
     }
-    private Schema clone(Schema schema) {
+    private Schema<?> clone(Schema<?> schema) {
         return AnnotationsUtils.clone(schema, config.isOpenAPI31());
     }
 
     protected void resolveResponseSchemaFromReturnType(
             Operation operation,
             io.swagger.v3.oas.annotations.responses.ApiResponse[] responses,
-            Schema schema,
+            Schema<?> schema,
             Produces classProduces, Produces methodProduces) {
         if (responses != null) {
             for (io.swagger.v3.oas.annotations.responses.ApiResponse response: responses) {
@@ -1268,7 +1277,7 @@ public class Reader implements OpenApiReader {
                         if (opResponse.getContent() != null) {
                             for (String key : opResponse.getContent().keySet()) {
                                 MediaType mediaType = clone(opResponse.getContent().get(key));
-                                Schema existingSchema = clone(schema);
+                                Schema<?> existingSchema = clone(schema);
                                 Optional<io.swagger.v3.oas.annotations.media.Content> content = Arrays.stream(response.content()).filter(c -> c.mediaType().equals(key)).findFirst();
                                 if (content.isPresent()) {
                                     Optional<Schema> reResolvedSchema = AnnotationsUtils.getSchemaFromAnnotation(content.get().schema(), components, null, config.isOpenAPI31(), existingSchema);
@@ -1290,8 +1299,8 @@ public class Reader implements OpenApiReader {
                             }
                             opResponse.content(content);
                         }
+                        opResponse.getContent().putAll(reresolvedMediaTypes);
                     }
-                    opResponse.getContent().putAll(reresolvedMediaTypes);
                 }
             }
         }
@@ -1309,7 +1318,7 @@ public class Reader implements OpenApiReader {
         }
         ignore = rawClassName.startsWith("javax.ws.rs.");
         ignore = ignore || rawClassName.equalsIgnoreCase("void");
-        ignore = ignore || ModelConverters.getInstance(config.isOpenAPI31()).isRegisteredAsSkippedClass(rawClassName);
+        ignore = ignore || ModelConverters.getInstance(config.isOpenAPI31(), config.getSchemaResolution()).isRegisteredAsSkippedClass(rawClassName);
         return ignore;
     }
 
@@ -1415,7 +1424,7 @@ public class Reader implements OpenApiReader {
             AnnotationsUtils.getExternalDocumentation(apiOperation.externalDocs(), openapi31).ifPresent(operation::setExternalDocs);
         }
 
-        OperationParser.getApiResponses(apiOperation.responses(), classProduces, methodProduces, components, jsonViewAnnotation, openapi31).ifPresent(responses -> {
+        OperationParser.getApiResponses(apiOperation.responses(), classProduces, methodProduces, components, jsonViewAnnotation, openapi31, defaultResponseKey).ifPresent(responses -> {
             if (operation.getResponses() == null) {
                 operation.setResponses(responses);
             } else {
@@ -1516,8 +1525,11 @@ public class Reader implements OpenApiReader {
         LOGGER.debug("trying extension {}", extension);
 
         extension.setOpenAPI31(Boolean.TRUE.equals(config.isOpenAPI31()));
-
-        return extension.extractParameters(annotations, type, typesToSkip, components, classConsumes, methodConsumes, true, jsonViewAnnotation, chain);
+        Schema.SchemaResolution curSchemaResolution = config.getSchemaResolution();
+        extension.setSchemaResolution(config.getSchemaResolution());
+        ResolvedParameter resolvedParameter = extension.extractParameters(annotations, type, typesToSkip, components, classConsumes, methodConsumes, true, jsonViewAnnotation, chain);
+        ((SwaggerConfiguration)config).setSchemaResolution(curSchemaResolution);
+        return resolvedParameter;
     }
 
     private Set<String> extractOperationIdFromPathItem(PathItem path) {
@@ -1550,37 +1562,37 @@ public class Reader implements OpenApiReader {
         if (components == null) {
             return true;
         }
-        if (components.getSchemas() != null && components.getSchemas().size() > 0) {
+        if (components.getSchemas() != null && !components.getSchemas().isEmpty()) {
             return false;
         }
-        if (components.getSecuritySchemes() != null && components.getSecuritySchemes().size() > 0) {
+        if (components.getSecuritySchemes() != null && !components.getSecuritySchemes().isEmpty()) {
             return false;
         }
-        if (components.getCallbacks() != null && components.getCallbacks().size() > 0) {
+        if (components.getCallbacks() != null && !components.getCallbacks().isEmpty()) {
             return false;
         }
-        if (components.getExamples() != null && components.getExamples().size() > 0) {
+        if (components.getExamples() != null && !components.getExamples().isEmpty()) {
             return false;
         }
-        if (components.getExtensions() != null && components.getExtensions().size() > 0) {
+        if (components.getExtensions() != null && !components.getExtensions().isEmpty()) {
             return false;
         }
-        if (components.getHeaders() != null && components.getHeaders().size() > 0) {
+        if (components.getHeaders() != null && !components.getHeaders().isEmpty()) {
             return false;
         }
-        if (components.getLinks() != null && components.getLinks().size() > 0) {
+        if (components.getLinks() != null && !components.getLinks().isEmpty()) {
             return false;
         }
-        if (components.getParameters() != null && components.getParameters().size() > 0) {
+        if (components.getParameters() != null && !components.getParameters().isEmpty()) {
             return false;
         }
-        if (components.getRequestBodies() != null && components.getRequestBodies().size() > 0) {
+        if (components.getRequestBodies() != null && !components.getRequestBodies().isEmpty()) {
             return false;
         }
-        if (components.getResponses() != null && components.getResponses().size() > 0) {
+        if (components.getResponses() != null && !components.getResponses().isEmpty()) {
             return false;
         }
-        if (components.getPathItems() != null && components.getPathItems().size() > 0) {
+        if (components.getPathItems() != null && !components.getPathItems().isEmpty()) {
             return false;
         }
 
@@ -1627,7 +1639,7 @@ public class Reader implements OpenApiReader {
         } else if (StringUtils.isBlank(path) && StringUtils.isNotBlank(parentPath)) {
             return false;
         }
-        if (parentPath != null && !"".equals(parentPath) && !"/".equals(parentPath)) {
+        if (parentPath != null && !parentPath.isEmpty() && !"/".equals(parentPath)) {
             if (!parentPath.startsWith("/")) {
                 parentPath = "/" + parentPath;
             }
@@ -1635,7 +1647,7 @@ public class Reader implements OpenApiReader {
                 parentPath = parentPath.substring(0, parentPath.length() - 1);
             }
         }
-        if (path != null && !"".equals(path) && !"/".equals(path)) {
+        if (path != null && !path.isEmpty() && !"/".equals(path)) {
             if (!path.startsWith("/")) {
                 path = "/" + path;
             }
